# SofaPython3

./: .gitignore  .readthedocs.yml  Authors.txt  CMakeLists.txt  License.md  README.md  SofaPython3Config.cmake.in  contributors.txt  flake.nix  package.nix  patch.txt  runFromPython.py  runSimu.py  sofaenv.py
Config/: CMakeLists.txt
Config/src/SofaPython3/Config/: futurefeatures.cpp  futurefeatures.h
Plugin/: CMakeLists.txt  PluginConfig.cmake.in
Plugin/src/SofaPython3/: DataCache.cpp  DataCache.h  DataFactory.cpp  DataFactory.h  DataHelper.cpp  DataHelper.h  EventFactory.cpp  EventFactory.h  LinkPath.cpp  LinkPath.h  Prefab.cpp  Prefab.h  PyBindHelper.h  PythonEnvironment.cpp  PythonEnvironment.h  PythonFactory.cpp  PythonFactory.h  PythonTest.cpp  PythonTest.h  PythonTestExtractor.cpp  PythonTestExtractor.h  SceneLoaderPY3.cpp  SceneLoaderPY3.h  SpellingSuggestionHelper.h  config.h  config.h.in  initModule.cpp  initModule.h
Plugin/src/SofaPython3/PrefabParameter/: DataAlias.cpp  DataAlias.h  DataLink.cpp  DataLink.h  DataSymlink.cpp  DataSymlink.h
Testing/: CMakeLists.txt  SofaPython3TestingConfig.cmake.in
Testing/src/SofaPython3Testing/: PythonTest.cpp  PythonTest.h  PythonTestExtractor.cpp  PythonTestExtractor.h  config.h.in  init.cpp
bindings/: BindingsConfig.cmake.in  CMakeLists.txt
bindings/Modules/: Bindings.ModulesConfig.cmake.in  CMakeLists.txt
bindings/Modules/tests/: CMakeLists.txt  main.cpp
bindings/Modules/tests/SofaConstraintSolver/: matrix_access.py
bindings/Modules/tests/SofaDeformable/: LinearSpring.py  SpringForceField.py
bindings/Modules/tests/SofaLinearSolver/: matrix_access.py
bindings/Modules/tests/SofaSimulationCore/: MechanicalOperations.py  VectorOperations.py
bindings/Sofa/: Bindings.SofaConfig.cmake.in  CMakeLists.txt
bindings/Sofa/package/: Lifecycle.py  __futurefeatures__.py  __init__.py  future.py  lifetime.py  livecoding.py  prefab.py  scenetestcase.py  test.py
bindings/Sofa/package/PyTypes/: RGBAColor.py  Vec3.py  __init__.py
bindings/Sofa/package/Types/: Vec3.py
bindings/Sofa/package/__Sofa_Types__/: RGBAColor.py  Vec3.py  __init__.py
bindings/Sofa/tests/: Binding_BaseObject_MockComponent.cpp  Binding_BaseObject_MockComponent.h  CMakeLists.txt  PythonModule_Sofa_test.cpp  bench_datacontainer.py  bench_node.py  benchmark.py  dataaccess.py  minitest.py
bindings/Sofa/tests/Components/: Components.py
bindings/Sofa/tests/Config/: Config.py
bindings/Sofa/tests/Core/: AutoDiffForceField.py  Base.py  BaseData.py  BaseLink.py  BaseMeshTopology.py  BaseObject.py  BuildConstraintSystemEndEvent.py  Controller.py  DataEngine.py  Events.py  ForceField.py  Mass.py  Prefab.py  (+7 more)
bindings/SofaExporter/: Bindings.SofaExporterConfig.cmake.in  CMakeLists.txt
bindings/SofaExporter/tests/: CMakeLists.txt  PythonModule_SofaExporter_test.cpp
bindings/SofaGui/: Bindings.SofaGuiConfig.cmake.in  CMakeLists.txt
bindings/SofaRuntime/: Bindings.SofaRuntimeConfig.cmake.in  CMakeLists.txt
bindings/SofaRuntime/package/: __init__.py
bindings/SofaRuntime/tests/: CMakeLists.txt  PythonModule_SofaRuntime_test.cpp
bindings/SofaTypes/: Bindings.SofaTypesConfig.cmake.in  CMakeLists.txt
bindings/SofaTypes/package/: __init__.py
bindings/SofaTypes/tests/: CMakeLists.txt  PythonModule_SofaTypes_test.cpp
docs/: CMakeLists.txt  README.md  make-stub.sh
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: Sofa.html  SofaRuntime.html  index.html
docs/html/_static/: documentation_options.js
docs/html/content/: Compilation.html  Contributing.html  CustomModule.html  Modules.html  PythonLibraries.html  SofaPlugin.html  UsingThePlugin.html
docs/sphinx/: Makefile
docs/sphinx-stubs/Sofa/: __init__.py  __init__.pyi
docs/sphinx-stubs/SofaExporter/: __init__.pyi
docs/sphinx-stubs/SofaRuntime/: __init__.py  __init__.pyi  setup.py
docs/sphinx-stubs/SofaTypes/: __init__.pyi
docs/sphinx-stubs/splib/: __init__.pyi
docs/sphinx/html/: genindex.html
docs/sphinx/source/: conf.py  index.rst  requirements.txt
examples/: .scene-tests  BaseCamera.py  CCDIntersection.py  CCDIntersection.py.view  CMakeLists.txt  ControllerScene.py  MessageHandler.py  ReadTheDocs_Example.py  SofaGui.py  StaticSolver.py  access_compliance_matrix.py  access_constraint_matrix.py  access_contact_forces.py  access_energy.py  access_mass_matrix.py  access_matrix.py  access_stiffness_matrix.py  advanced_timer.py  basic-addGUI.py  basic-useQtGUI.py  basic.py  easingScene.py  easingSceneMatplotlib.py  emptyController.py  emptyDataEngine.py  emptyForceField.py  example-drawing-controller.py  example-forcefield.py  example-mapping.py  example-mapping_3_to_1.py  example-prefab.py  example-requiredplugin.py  example-scriptcontroller.py  example-scriptcontroller.pyscn  example.pyscn  import_python_scene.py  keyEvents.py  liver-scriptcontroller.py  liver.py  loadXMLfromPython.py  (+10 more)
examples/CGAL/: mesh_from_point_cloud_using_convex_hull.py  mesh_from_polyhedron.py  requirements.txt
examples/CGAL/data/: point_cloud.pcd
examples/RPYC/: ExampleFileOnRemote.py  ExampleLocalCreateSceneMethod.py  ExampleManipulatingTheNodeLocally.py  SOFAService.py
examples/SOFAUnits/: CustomUnitsExample.py  SimulationParameters.py  units.py
examples/SOFAUnits/tests/: conftest.py  test_simulation_parameters.py  test_units.py
examples/additional-examples/: ControllerScene.py  pygame_example.py  pyqt_example.py
examples/benchmarks/: emptyMultipleControllers.py
examples/jax/: forcefield.py
examples/meshing/CGAL/: README.txt  cgal_utils.py  mesh_from_point_cloud_using_convex_hull.py  mesh_from_polyhedron.py
examples/meshing/Gmsh/: generateMesh.py
examples/modifier-exp/: test1.py
examples/pygame_renderingloop/: backend_pygame.py  pygame_test.py
examples/stlib/: EulalieScene.py  PrefabScene_beginner.py  PrefabScene_intermediate.py  SofaScene.py  node_modifier.py  node_modifier.py.view
examples/test_prefab_meeting/: entity.py  entity2.py  test-1.py
examples/tests/: testReassignmentController.py
(+556 files in other folders)
